--- a/Theory.tex
+++ b/Theory.tex
@@ -2,20 +2,20 @@
 
 \chapter{Theory}
 
-This section will dive into the mathematical theory behind the recursive state estimator used in this project, the Extended Kalman Filter. Steps have been taken to carefully explain every computation made for the less mathematically inclined. This section is largely based on chapters 1-3 of the book Probabilistic Robotics, which the interested reader should view for a broader look at the same material. \cite{probabilisticRobotics}.
+This chapter will dive into the mathematical theory behind the recursive state estimator used in this project, the Extended Kalman Filter. Steps have been taken to carefully explain every computation made for the less mathematically inclined. This section is largely based on chapters 1-3 of the book Probabilistic Robotics \cite{probabilisticRobotics}, which the interested reader should view for a broader look at the same material. 
 
 \section{Probability Theory Background} \label{sectionProbTheory}
-Robots work with stochastic data, and so probability theory is vital to understanding their inner workings. Here we will review some elementary probability theory results which will be needed in this chapter.
+To gather information about their environment, robots use sensor data. This data always has some amount of random noise associated with it. Thus probability theory is vital to creating models which incorporate  this uncertainty. Here we will review some probability theory results which will be needed in this chapter.
 
 % technically p(X=x) = 0 for continuous PDFs, but we're working with finite precision computers so who cares. It's easier to think of this way.
-Random variables are objects from which specific numbers may be observed. Let X be a continuous random variable - that is, observations of X are real numbers. We will represent the probability of observing any particular real number x from X as \( p(X = x) \equiv p(x)\). This defines a function \(p: \mathbb{R} \to \mathbb{R}\) representing the distribution of probabilities for the real numbers. Throughout this chapter, we will refer to such functions as PDFs (probability density functions). Note the basic result that for every PDF \(p\) constructed from a random variable X, \(\int p(x)dx = 1\), which is to say that the observed value from X will be a real number with 100\% certainty.
+Random variables are objects from which specific numbers may be observed. Let X be a continuous random variable - that is, observations of X are real numbers. We will represent the probability of observing any particular real number x from X as \( p(X = x) \equiv p(x)\). This defines a function \(p: \mathbb{R} \to \mathbb{R}\) representing the distribution of probabilities across the real numbers. Throughout this chapter, we will refer to such functions as Probability Density Functions (PDFs). Note the basic result that for every PDF \(p\) constructed from a random variable X, \(\int p(x)dx = 1\), which is to say that the observed value from X will be some real number with 100\% certainty.
 
-An important tool for describing PDFs is the expectation. We will define \(E[X]\) to be the expected value, or arithmetic mean of, X. Note that the expectation operator is linear: \(E[\alpha X + \beta Y] = \alpha E[X] + \beta E[Y]\).
+An important tool for describing PDFs is their expectation. \(E[X]\) is the expected value or mean of X. Note that the expectation operator is linear: \(E[\alpha X + \beta Y] = \alpha E[X] + \beta E[Y]\).
 
 For two random variables X and Y, we will define their covariance to be
 \[
 cov(X,Y) = E[(X - E[X])(Y - E[Y])]
-\]. This gives a measure of the linear relationship between X and Y.
+\] This gives a measure of the co-dependence between X and Y.
 
 The same concepts may be scaled up to random vectors, which are \(n\)-dimensional collections of random variables. Then \(X = (X_1,X_2,...,X_n)^T\), and \(p:\mathbb{R}^n \to \mathbb{R}\) still defines a PDF. The expectation becomes \[
 E[X] = \begin{pmatrix}
@@ -35,22 +35,23 @@ cov(X_n,X_1)  \dots cov(X_n,X_n)
 \]
 
 
-Now consider three random variables: X, Y, and Z. Define the joint distribution \(p(X=x\ \textrm{and}\ Y=y\ \textrm{and}\ Z=z) \equiv p(x,y,z)\), and the conditional probability \(p(X=x\ \textrm{given that}\ Y=y\ \textrm{and}\ Z=z) \equiv p(x \mathbin{\vert} y,z)\). The conditional probability is defined to be
+Now consider three random variables: X, Y, and Z. Define their joint distribution \(p(X=x\ \textrm{and}\ Y=y\ \textrm{and}\ Z=z) \equiv p(x,y,z)\), and the conditional probability \(p(X=x\ \textrm{given that}\ Y=y\ \textrm{and}\ Z=z) \equiv p(x \mathbin{\vert} y,z)\). The conditional probability is given to be
 \begin{equation} \label{eqCondProb}
 p(x \mathbin{\vert} y,z) = \frac{p(x,y,z)}{p(y,z)}
 \end{equation}
 
-The \textit{Law of Total Probability} states that \(p(x) = \int p(x,y)dy\). Extending this law to use a third random variable Z, and incorporating Equation \ref{eqCondProb}, we end up with the following equation:
-\begin{equation} \label{eqTotalProb}
-p(x \mathbin{\vert} z) = \int p(x,y \mathbin{\vert} z)dy
-= \int p(y,z)p(x \mathbin{\vert} y,z)dy
-\end{equation}
+The \textit{Law of Total Probability} states that \(p(x) = \int p(x,y)dy\). Conditioning this law on a third random variable Z, and incorporating the definition of conditional probability (Eq. \ref{eqCondProb}), we end up with the following version of this law:
+\begin{multline} \label{eqTotalProb}
+p(x \mathbin{\vert} z) = \int p(x,y \mathbin{\vert} z)dy = \int \frac{p(x,y,z)}{p(z)}  \\
+= \int \frac{p(x,y,z)}{p(y,z)} * \frac{p(y,z)}{p(z)} = \int p(x \mathbin{\vert} y,z) p(y\mathbin{\vert}z)dy \hfill
+\end{multline}
 
-Using equations \ref{eqTotalProb} and \refeq{eqCondProb}, one can derive a formula known as Bayes' Rule. 
-\begin{equation} \label{eqBayesThm}
-p(x \mathbin{\vert} y,z) = \frac{p(x,y,z)}{p(y,z)} = \frac{p(y,x,z)}{p(x,z)} * \frac{p(x,z)}{p(y,z)} = \frac{p(y \mathbin{\vert} x,z)p(x,z)}{p(y \mathbin{\vert} z)}
-\end{equation}
-In the future this will prove to be a useful tool to update a PDF with new information. When presented with new information that  \(Y = y\), one may use Bayes' Rule to transform the current PDF \(p(x \mathbin{\vert}z)\) into the new posterior PDF \(p(x \mathbin{\vert} y,z)\). %from the inverse conditional probability \(p(y \mathbin{\vert} x)\) and the prior PDF \(p(x)\).
+In a similar fashion, we can use the definition of conditional probability (Eq. \ref{eqCondProb}) to derive a version of Bayes' Rule. 
+\begin{multline} \label{eqBayesThm}
+p(x \mathbin{\vert} y,z) = \frac{p(x,y,z)}{p(y,z)} = \frac{p(y,x,z)}{p(x,z)} * \frac{p(x,z)}{p(z)} * \frac{p(z)}{p(y,z)} \\
+= \frac{p(y \mathbin{\vert} x,z)p(x\mathbin{\vert}z)}{p(y \mathbin{\vert} z)} \hfill
+\end{multline}
+In the future these will prove to be useful tools to update a PDF with new information. When presented with new information that  \(Y = y\), one may use Bayes' Rule to transform the current PDF \(p(x \mathbin{\vert}z)\) into the new posterior PDF \(p(x \mathbin{\vert} y,z)\). %from the inverse conditional probability \(p(y \mathbin{\vert} x)\) and the prior PDF \(p(x)\).
 
 \section{Bayes Filter}
 \subsection{Scenario}
@@ -66,7 +67,7 @@ The robot wishes to know \(x_t\), however this true state is hidden. It only has
 \subsection{Derivation}
 Now we must figure out how to compute \(\bel(x_t)\). Let us start by using Bayes' Rule to rewrite \(\bel(x_t)\):
 \begin{equation*}
-\bel(x_t) = p(x_t \mathbin{\vert} z_{1:t}) = \frac{p(z_t \mathbin{\vert} x_t, z_{1:t-1})p(x_t \mathbin{\vert} z_{1:t-1})}{p(z_t \mathbin{\vert} z_{1:t-1})}
+\bel(x_t) = p(x_t \mathbin{\vert} z_{1:t}) = p(x_t \mathbin{\vert} z_t, z_{1:t-1}) = \frac{p(z_t \mathbin{\vert} x_t, z_{1:t-1})p(x_t \mathbin{\vert} z_{1:t-1})}{p(z_t \mathbin{\vert} z_{1:t-1})}
 \end{equation*}
 
 In order to continue, we will need to simplify \(p(z_t \mathbin{\vert} x_t, z_{1:t-1})\). Here we will make an important assumption. We will assume that the state \(x_t\) satisfies the Markov property: that is, \(x_t\) perfectly encapsulates all current and prior information \cite{robot_localization_paper}. Thus if \(x_t\) is known, then \(z_{1:t}\) are redundant, i.e. \(p(z_t \mathbin{\vert} x_t, z_{1:t}) = p(z_t \mathbin{\vert} x_t)\).
@@ -105,7 +106,7 @@ Once we assume the \textit{state transition probability} and \textit{measurement
 \Function{BayesFilterIterate}{ $\bel(x_{t-1})$, $z_t$ }
 	\State{\(\overline{\bel}(x_t) = \int p(x_t \mathbin{\vert} x_{t-1}) \bel(x_{t-1})dx_{t-1} \)}
 	\State{\(\bel(x_t) = \eta p(z_t \mathbin{\vert} x_t) \overline{\bel}(x_t) \)}
-	\State{Set \(\int \bel(x_t)dx = 1\), and solve for \(\eta \)}
+	\State{Set \(\int \bel(x_t)dx_t = 1\), and solve for \(\eta \)}
 	\State{Use \(\eta\) to normalize \(\bel(x_t)\)}
 	\State \Return{\(\bel(x_t)\)}
 	\EndFunction
@@ -123,42 +124,41 @@ where \(E[X]\) and \(\Sigma\) are the mean and covariance matrix of the random v
 \begin{equation} \label{eqBelNormalDef}
 \bel(x_t) = N(x_t; \mu_t,\Sigma_t)
 \end{equation}
-where \(\mu_t = E[X_t]\) is the mean or best estimate, and \(\Sigma_t\) is the covariance matrix or uncertainty. These are the values which our new algorithm will try to compute; doing so will completely describe \(\bel(x_t)\).
+where \(\mu_t = E[X_t]\) is the mean or best state estimate, and \(\Sigma_t\) is the covariance matrix or uncertainty. These are the values which our new algorithm will try to compute; doing so will completely describe \(\bel(x_t)\).
 
-Recall that Algorithm \ref{alg:BayesFilter} (Bayes' Filter) requires that the state transition PDF (\(p(x_t \mathbin{\vert} x_{t-1})\)) be given. So let us assume that the evolution of state is known via some model \[x_t =  g(x_{t-1}) + \epsilon_t\] where \(g: \mathbb{R}^n \to \mathbb{R}^n\) is some arbitrary function defining how the state evolves, and \(\epsilon_t\) is additive noise in the model. We will define \(\epsilon_t\) to be a random vector of normal distribution with mean 0 and covariance matrix \(R_t\).
+Recall that Algorithm \ref{alg:BayesFilter} (Bayes' Filter) requires that the state transition PDF \(p(x_t \mathbin{\vert} x_{t-1})\) be given. So let us assume that the evolution of state is known via some model \[X_t =  g(X_{t-1}) + \epsilon_t\] where \(g: \mathbb{R}^n \to \mathbb{R}^n\) is some arbitrary function defining how the state evolves, and \(\epsilon_t\) is additive noise in the model. We will define \(\epsilon_t\) to be a random vector of normal distribution with mean 0 and covariance matrix \(R_t\).
 
 % Why must we linearize?
 %In order to
-We will linearize this model by a first-order Taylor series approximation around the current best estimate, \(\mu_{t-1}\).
+If \(g\) is nonlinear, then it will distort the prior belief such that the posterior belief will no longer be normally distributed. In order to maintain our normal distribution assumption, we will have to make an approximation to the model. We will do so by linearizing this model using a first-order Taylor series approximation around the current best estimate, \(\mu_{t-1}\).
 \begin{multline*}
-g(x_{t-1}) \approx g(\mu_{t-1}) + \frac{\partial g(\mu_{t-1})}{\partial x_{t-1}} (x_{t-1} - \mu_{t-1}) \\
-= g(\mu_{t-1}) + G_t (x_{t-1} - \mu_{t-1}) \hfill
+g(X_{t-1}) \approx g(\mu_{t-1}) + \frac{\partial g(\mu_{t-1})}{\partial X_{t-1}} (X_{t-1} - \mu_{t-1}) \\
+= g(\mu_{t-1}) + G_t (X_{t-1} - \mu_{t-1}) \hfill
 \end{multline*}
 where \[
 G_t = \begin{bmatrix} 
-\frac{\partial g_1(\mu_{t-1})}{\partial x_{1_{t-1}}} & \dots & \frac{\partial g_1(\mu_{t-1})}{\partial x_{n_{t-1}}}\\
+\frac{\partial g_1(\mu_{t-1})}{\partial X_{1_{t-1}}} & \dots & \frac{\partial g_1(\mu_{t-1})}{\partial X_{n_{t-1}}}\\
 \vdots & \ddots & \vdots & \\
-\frac{\partial g_n(\mu_{t-1})}{\partial x_{1_{t-1}}} & \dots & \frac{\partial g_n(\mu_{t-1})}{\partial x_{n_{t-1}}} 
-\end{bmatrix} \] is the Jacobian of \(g\) evaluated at \(\mu_{t-1}\). Then rewriting the model, we have
+\frac{\partial g_n(\mu_{t-1})}{\partial X_{1_{t-1}}} & \dots & \frac{\partial g_n(\mu_{t-1})}{\partial X_{n_{t-1}}} 
+\end{bmatrix} \] is the Jacobian of \(g\) evaluated at \(\mu_{t-1}\). Then our approximate model is given by
 \begin{equation*}
-x_t \approx g(\mu_{t-1}) + G_t (x_{t-1} - \mu_{t-1}) + \epsilon_t
+X_t \approx g(\mu_{t-1}) + G_t (X_{t-1} - \mu_{t-1}) + \epsilon_t
 \end{equation*}
-
-Then the mean of the state transition PDF is
+To describe the state transition PDF \(p(x_t \mathbin{\vert} x_{t-1})\), we are interested in finding its expectation and covariance matrix. Because its PDF is conditioned on \(x_{t-1}\), we likewise will condition its expectation. Then we can calculate the mean:
 \begin{multline*}
-E[x_t\ \mathbin{\vert} x_{t-1}] \approx E[g(\mu_{t-1}) + G_t (x_{t-1} - \mu_{t-1}) + \epsilon_t\ \mathbin{\vert} x_{t-1}] \\
-= E[g(\mu_{t-1}) + G_t (x_{t-1} - \mu_{t-1})\ \mathbin{\vert} x_{t-1}] + E[\epsilon_t\ \mathbin{\vert} x_{t-1}] \hfill \text{(by linearity of E[X])} \\
-= E[g(\mu_{t-1}) + G_t (x_{t-1} - \mu_{t-1})\ \mathbin{\vert} x_{t-1}] \hfill \text{(by the definition of \(\epsilon_t\))} \\
-= g(\mu_{t-1}) + G_t (x_{t-1} - \mu_{t-1}) \hfill
+E[X_t\ \mathbin{\vert} X_{t-1}] \approx E[g(\mu_{t-1}) + G_t (X_{t-1} - \mu_{t-1}) + \epsilon_t\ \mathbin{\vert} X_{t-1}] \\
+= E[g(\mu_{t-1}) + G_t (X_{t-1} - \mu_{t-1})\ \mathbin{\vert} X_{t-1}] + E[\epsilon_t\ \mathbin{\vert} X_{t-1}] \hfill \text{(by linearity of E[X])} \\
+= E[g(\mu_{t-1}) + G_t (X_{t-1} - \mu_{t-1})\ \mathbin{\vert} X_{t-1}] \hfill \text{(by the definition of \(\epsilon_t\))} \\
+= g(\mu_{t-1}) + G_t (X_{t-1} - \mu_{t-1}) \hfill
 \end{multline*}
-and covariance matrix
+and the covariance matrix:
 \begin{multline*}
-E[(x_t - E[x_t])(x_t - E[x_t])^T\ \mathbin{\vert} x_{t-1}] \\ \approx E[(g(\mu_{t-1}) + G_t (x_{t-1} - \mu_{t-1}) + \epsilon_t - g(\mu_{t-1}) - G_t (x_{t-1} - \mu_{t-1})) \\
-* (g(\mu_{t-1}) + G_t (x_{t-1} - \mu_{t-1}) + \epsilon_t - g(\mu_{t-1}) - G_t (x_{t-1} - \mu_{t-1}))^T\ \mathbin{\vert} x_{t-1}] \\
-= E[\epsilon_t \epsilon_t^T\ \mathbin{\vert} x_{t-1}] = E[(\epsilon_t - 0)(\epsilon_t - 0)^T\ \mathbin{\vert} x_{t-1}] \\
-= E[(\epsilon_t - E[\epsilon_t\ \mathbin{\vert} x_{t-1}])(\epsilon_t - E[\epsilon_t\ \mathbin{\vert} x_{t-1}])^T\ \mathbin{\vert} x_{t-1}] = R_t \hfill
-\end{multline*}
-and so its Gaussian distribution is
+E[(X_t - E[X_t])(X_t - E[X_t])^T\ \mathbin{\vert} X_{t-1}] \\ \approx E[(g(\mu_{t-1}) + G_t (X_{t-1} - \mu_{t-1}) + \epsilon_t - g(\mu_{t-1}) - G_t (X_{t-1} - \mu_{t-1})) \\
+* (g(\mu_{t-1}) + G_t (X_{t-1} - \mu_{t-1}) + \epsilon_t - g(\mu_{t-1}) - G_t (X_{t-1} - \mu_{t-1}))^T\ \mathbin{\vert} X_{t-1}] \\
+= E[\epsilon_t \epsilon_t^T\ \mathbin{\vert} X_{t-1}] = E[(\epsilon_t - 0)(\epsilon_t - 0)^T\ \mathbin{\vert} X_{t-1}] \\
+= E[(\epsilon_t - E[\epsilon_t\ \mathbin{\vert} X_{t-1}])(\epsilon_t - E[\epsilon_t\ \mathbin{\vert} X_{t-1}])^T\ \mathbin{\vert} X_{t-1}] \\
+= R_t \hfill \text{(by the definition of \(\epsilon_t\))} \end{multline*}
+and so its Gaussian distribution is approximately
 \begin{equation} \label{eqStateTransitionNormalDef}
 p(x_t \mathbin{\vert} x_{t-1}) \approx N(x_t;g(\mu_{t-1}) + G_t (x_{t-1} - \mu_{t-1}),R_t)
 \end{equation}
@@ -171,6 +171,15 @@ For the benefit of the unfamiliar reader, here we will restate some elementary r
 
 For \(A,B \in \mathbb{R}^{nxn}\):
 \begin{gather}
+A = \begin{pmatrix}
+A_{11}  \dots A_{1n} \\
+\vdots  \ddots  \vdots \\
+A_{n1} \dots  A_{nn}
+\end{pmatrix}  \implies A^T = \begin{pmatrix}
+A_{11}  \dots A_{n1} \\
+\vdots  \ddots  \vdots  \\
+A_{1n} \dots A_{nn}
+\end{pmatrix} \\
 (AB)^T = B^T A^T \\
 (A+B)^T = A^T + B^T \\
 A \text{ is symmetric} \implies A^T = A \\
@@ -264,7 +273,7 @@ f(a) + \frac{1}{2} (x-x^*)^T \frac{\partial^2 f}{\partial x^2} (x-x^*) \\
 \begin{lemma} 
 	\label{lemmaHessianInverse}
 	Let \(p: \mathbb{R}^n \to \mathbb{R}\) be a PDF given by \[
-	p(x) = \eta_1\ exp\{ - L \}
+	p(x) = \eta_1\ exp\{ - L(x) \}
 	\]
 	where \(L: \mathbb{R}^n \to \mathbb{R}\), \(L(x) = x^T Ax + Bx + C\), and \(\eta_1\) is a normalizing constant. Then \(p\) defines a normal distribution with mean equal to the extremum of L, and covariance matrix equal to \((\frac{\partial^2 L}{\partial x})^{-1}\).
 \end{lemma}
@@ -309,7 +318,7 @@ For \(R \in \mathbb{R}^{nxn}, Q \in \mathbb{R}^{kxk}, P \in \mathbb{R}^{nxk}\) w
 \subsection{Derivation}
 Note that in the following mathematical derivation, because cov(X,Y) = cov(Y,X), the covariance matrix \(R_t\) is symmetric by definition.
 
-We can now begin by rewriting Line 2 of Algorithm \ref{alg:BayesFilter} (the Bayes Filter) using our normal PDF definitions (Eq. \ref{eqBelNormalDef} and \ref{eqStateTransitionNormalDef}):
+We can now begin by rewriting Line 2 of Algorithm \ref{alg:BayesFilter} (the Bayes Filter) using our normal PDF definitions (Eqs. \ref{eqBelNormalDef} and \ref{eqStateTransitionNormalDef}):
 \begin{multline} \label{eqBelBarLt}
 \overline{\bel}(x_t) = \int p(x_t \mathbin{\vert} x_{t-1}) \bel(x_{t-1})dx_{t-1} \\
 \approx det(2 \pi R_t)^{-\frac{1}{2}} det(2 \pi \Sigma_{t-1})^{-\frac{1}{2}} \int [ exp\{-\frac{1}{2} (x_t - g(\mu_{t-1}) - G_t (x_{t-1} - \mu_{t-1}))^T \\ * R_t^{-1} (x_t - g(\mu_{t-1}) - G_t (x_{t-1} - \mu_{t-1}))\} * exp \{-\frac{1}{2} (x_t - \mu_{t-1})^T \Sigma_{t-1}^{-1} (x_t - \mu_{t-1}) \}dx_{t-1} ] \\
@@ -324,7 +333,7 @@ L_t = \frac{1}{2} (x_t - g(\mu_{t-1}) - G_t (x_{t-1} - \mu_{t-1}))^T R_t^{-1} (x
 By assumption, \(\overline{\bel}(x_t)\) is a normal distribution. We will define its mean and covariance to be \(\overline{\mu}\) and \(\overline{\Sigma}\) respectively. In order to compute these matrices, we would like to use Lemma \ref{lemmaHessianInverse}. However, to turn \(\overline{\bel}(x_t)\) into the proper form, we will have to get rid of the integral over \(x_{t-1}\). To do so, we will decompose \(L_t\) into two terms like so: \begin{equation} \label{eqLtDecomp}
 L_t = L_t(x_{t-1},x_t) + L_t(x_t)
 \end{equation}
-where all terms containing \(x_{t-1}\) are collected in \(L_t(x_{t-1},x_t)\). This will allow us to move \(L_t(x_t)\) outside of \(\overline{\bel}(x_t)\)'s integral, as it will not depend on \(x_{t-1}\). Then, as long as we choose our decomposition so that the integral of \(L_t(x_{t-1},x_t)\) equals a constant, we will be left with \(\overline{\bel}(x_t)\) in a form where we can apply Lemma \ref{lemmaHessianInverse}.
+where all terms containing \(x_{t-1}\) are collected in \(L_t(x_{t-1},x_t)\). This will allow us to move \(L_t(x_t)\) outside of \(\overline{\bel}(x_t)\)'s integral, as it will not depend on \(x_{t-1}\). Then, as long as we choose our decomposition so that \(\int L_t(x_{t-1},x_t)dx_{t-1}\) does not depend on \(x_t\), we will be left with \(\overline{\bel}(x_t)\) in a form where we can apply Lemma \ref{lemmaHessianInverse}.
 
 Now to proceed with this decomposition. Notice that \(L_t : \mathbb{R}^n \times \mathbb{R}^n \to \mathbb{R}\) is quadratic with respect to \(x_{t-1}\). By Lemma \ref{lemmaTaylorDecomp} we know that we can rewrite \(L_t\) using the extremum with respect to \(x_{t-1}: x_{t-1}^*\) \[
 L_t = \underline{L_t(x_{t-1}^*)} + \frac{1}{2} (x_{t-1} - x_{t-1}^*) \frac{\partial^2 L_t}{\partial x_{t-1}^2} (x_{t-1} - x_{t-1}^*)
@@ -458,7 +467,7 @@ H_t = \begin{bmatrix}
 \frac{\partial h_k(\overline{\mu_t})}{\partial x_{1_{t-1}}} & \dots & \frac{\partial h_k(\overline{\mu_t})}{\partial x_{n_{t-1}}} 
 \end{bmatrix} \] is the Jacobian of \(h\) evaluated at \(\overline{\mu_t}\).
 
-Then in the same manner as we did with the state transition pdf, we can calculate the mean of the measurement pdf \(E[Z]\) to be \(h(\overline{\mu_t}) + H_t (x_t - \overline{\mu_t})\), with covariance matrix \(Q_t\). Thus the measurement pdf has the form \[p(z_t \mathbin{\vert} x_t)  \approx N(z_t;h(\overline{\mu_t}) + H_t (x_t - \overline{\mu_t}),Q_t)\] Note that just as before, the covariance matrix \(Q_t\) is symmetric by definition.
+Then in the same manner as we did with the state transition PDF, we can calculate the mean of the measurement PDF \(E[Z_t]\) to be \(h(\overline{\mu_t}) + H_t (X_t - \overline{\mu_t})\), with covariance matrix \(Q_t\). Thus the measurement PDF has the form \[p(z_t \mathbin{\vert} x_t)  \approx N(z_t;h(\overline{\mu_t}) + H_t (x_t - \overline{\mu_t}),Q_t)\] Note that just as before, the covariance matrix \(Q_t\) is symmetric by definition.
 
 We will begin by rewriting the update step using the normal distribution definitions.
 \begin{multline*}
@@ -470,7 +479,7 @@ J_t = \frac{1}{2} (z_t - h(\overline{\mu_t}) - H_t (x_t - \overline{\mu_t}))^T Q
 + \frac{1}{2} (x_t - \overline{\mu_t})^T \overline{\Sigma_t}^{-1} (x_t - \overline{\mu_t})
 \]
 
-\(\bel(x_t)\), as all PDFs, must be normally distributed. We will denote its mean and covariance matrix by \(\mu\) and \(\Sigma\). This time there is no integral, and so we can immediately apply Lemma \ref{lemmaHessianInverse}. 
+\(\bel(x_t)\) must be normally distributed by assumption. We will denote its mean and covariance matrix by \(\mu\) and \(\Sigma\). This time there is no integral, and so we can immediately apply Lemma \ref{lemmaHessianInverse}. 
 Therefore the mean and covariance of the normal distribution representing \(\bel(x_t)\) will be equal to the extremum of \(J_t\), and the inverse of its second derivative. Let us now compute these values.
 
 \begin{multline*}
@@ -494,7 +503,7 @@ Therefore the mean and covariance of the normal distribution representing \(\bel
 \implies \mu_t = \overline{\mu_t} + \Sigma_t H_t^TQ_t^{-1}(z_t - h(\overline{\mu_t})) \hfill
 \end{multline*}
 
-Thus the update step of the Bayes Filter, which incorporated the most recent sensor measurement using the measurement PDF, can be translated into the following two computations:
+Thus the update step of the Bayes Filter, which updates the belief distribution using the most recent sensor measurement, can be translated into the following two computations:
 \[
 \mu_t = \overline{\mu_t} + \Sigma_t H_t^TQ_t^{-1}(z_t - h(\overline{\mu_t})) \\
 \Sigma_t = (H_t^T Q_t^{-1} H_t + \overline{\Sigma_t}^{-1})^{-1}
@@ -517,7 +526,7 @@ The only other steps of Bayes' Filter involve normalizing the belief distributio
 \end{algorithm}
 
 %% NEED TO JUSTIFY THIS, CALCULATE O() COMPLEXITY
-We could stop here and be done with it. However, the computational complexity of inverting a \(d\) by \(d\) matrix using today's methods is approximately O(\(d^{2.8}\)) \cite{}. Line 4 of the current algorithm inverts the \(n\) by \(n\) matrix \(\overline{\Sigma_t}\), where \(n\) is the dimension of the state vector \(x_t\). So the computation of \(\Sigma_t\) given here is O(\(n^{2.8}\)). It turns out that we can rewrite Line 4 and avoid inverting the state covariance matrix as so:
+We could stop here and be done with it. However, the computational complexity of inverting a \(d\) by \(d\) matrix using today's methods is approximately O(\(d^{2.8}\)). Line 4 of the current algorithm inverts the \(n\) by \(n\) matrix \(\overline{\Sigma_t}\), where \(n\) is the dimension of the state vector \(x_t\). So the computation of \(\Sigma_t\) given here is O(\(n^{2.8}\)). It turns out that we can rewrite Line 4 and avoid inverting the state covariance matrix as so:
 \begin{multline*}
 \Sigma_t = (H_t^T Q_t^{-1} H_t + \overline{\Sigma_t}^{-1})^{-1} \\
 = \overline{\Sigma_t} - \overline{\Sigma_t} H_t^T (Q_t + H_t \overline{\Sigma_t} H_t^T)^{-1} H_t \overline{\Sigma_t} \hfill \text{(by Lemma \ref{lemmaInversion})} \\
@@ -546,7 +555,7 @@ K_t = \overline{\Sigma_t} H_t^T (Q_t + H_t \overline{\Sigma_t} H_t^T)^{-1} = (\S
 = \Sigma_t H_t^T Q_t^{-1} \hfill
 \end{multline}
 
-which means the computation of \(\mu_t\) may also be rewritten using \(K_t\). Thus we can construct our new, more optimal EKF  algorithm.
+which means the computation of \(\mu_t\) may also be rewritten using \(K_t\). Thus we can construct our more optimal version of the EKF.
 \begin{algorithm} 
 	\caption{Extended Kalman Filter}
 	\label{alg:EKFOptimal}
@@ -565,16 +574,16 @@ which means the computation of \(\mu_t\) may also be rewritten using \(K_t\). Th
 \subsection{Remarks}
 In total the EKF algorithm has a computational complexity of \(max\)(O(\(n^{2.8}\)), O(\(k^{2.8}\)), O(\(g\)), O(\(h\))) per iteration, where the complexity of executing the functions \(g\) and \(h\) is unknown, but in practice are often O(\(1\)).
 
-%It is important to note that several assumptions made in the derivation are unlikely to be completely true in reality.
+It is important to note that several assumptions made in the derivation are unlikely to be completely true in reality.
 
-%normal distribution, unimodal, a single best guess with some uncertainty associated with it. incapable of handling multiple hypotheses at once
+We assumed that all PDFs were represented by normal distributions, meaning they are unimodal. For many sensor measurements, this makes sense: the reported measurement is the unimodal mean of the measurement PDF, and the estimated noise of that measurement is encoded in the covariance matrix. However, in situations in which there are two or more equally likely states, the belief distribution is poorly approximated by a unimodal distribution.
 
-%only gives an approximation to the true state transition and measurement models, via linearization. How good this approximation is depends on 
-%\cite{probabilisticRobotics}
-%independent white noise
-%markov assumption, unimodal assumption, gaussian assumption, white noise assumption
+We also used a first-order Taylor expansion to linearize the state transition and measurement models. If either \(g\) or \(h\) are extremely nonlinear, then the filter may experience large errors. However in practice, the EKF gives appreciable results in real-time. 
 
-%it's also only an approximation via linearization of the true belief distribution. If either the underlying state transition model \(g\), or the sensor projection \(h\) are extremely nonlinear, then the filter may experience large errors. However in practice, the EKF gives appreciable results in real-time.
+%All noise was assumed to be normally distributed with mean zero. If there are unmodeled system dynamics - as is often the case in the real world - then their effect can be encapsulated in state transition noise, as long as the effects are roughly linear
+
+
+%markov assumption
 
 %coming up with appropriate \(R_t\) and \(Q_t\) covariance matrices
 
